# resume-ir

./: .env.example  .gitignore  ACTIVE_GOAL.toml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  GOAL.md  LICENSE  MANIFEST.md  PROGRESS.md  README.md  SECURITY.md  design-qa.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.bundle.conf.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
crates/benchmark-runner/: Cargo.toml
crates/benchmark-runner/src/: lib.rs  private_query_command_pipe.rs  resident_query_client.rs  resident_query_fixture.rs  resident_query_load.rs  synthetic_query_workload.rs  synthetic_query_workload_tests.rs
crates/benchmark-runner/tests/: s17_benchmark_cli.rs  s17_benchmark_runner.rs
crates/cli/: Cargo.toml
crates/cli/src/: daemon_ipc_contract.rs  daemon_ipc_contract_tests.rs  import_processing.rs  lib.rs  main.rs  purge_residual.rs  release_readiness_matrix.rs
crates/cli/tests/: commands.rs  identity.rs  s10_search_filters.rs  s13_diagnostics.rs  s142_privacy_key_cli.rs  s146_metadata_key_cli.rs  s147_metadata_key_rotation_cli.rs  s14_delete_search.rs  s15_ocr_handoff.rs  s161_release_readiness.rs  s16_persisted_fields.rs  s173_classifier_model.rs  s174_ocr_manifest.rs  s18_candidate_folding.rs  s20_status_ipc.rs  s21_import_candidate_assignment.rs  s303_dataset_manifest.rs  s304_query_set.rs  s39_embedding_worker.rs  s47_import_ipc.rs  s48_search_ipc.rs  s49_detail_cli.rs  s49_detail_ipc.rs  s4_cli.rs  s50_delete_ipc.rs  s66_service_lifecycle.rs  s71_fault_injection.rs  s8_search_cli.rs  s9_import_search.rs  skeleton.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: bootstrap.rs  command_failure.rs  daemon_contract_tests.rs  daemon_error.rs  daemon_policy.rs  detail_hydrate.rs  detail_hydrate_tests.rs  detail_ipc.rs  diagnostics_ipc.rs  embedding_runtime.rs  import_processing.rs  import_root_control.rs  import_watcher.rs  import_worker.rs  lib.rs  main.rs  migration_repair.rs  ocr_worker.rs  parent_lifecycle.rs  query_runtime.rs  query_timing.rs  rescan_schedule.rs  run_options.rs  runtime_pack.rs  runtime_pack_tests.rs  runtime_probe.rs  search_artifact_worker.rs  search_batch.rs  search_batch_tests.rs  search_contract.rs  search_ipc.rs  search_runtime_config.rs  store_access.rs  worker_ipc.rs  worker_output.rs  worker_runtime.rs  worker_time.rs
crates/daemon/tests/: identity.rs  lifecycle.rs  s20_ipc.rs  s48_search_ipc.rs  s49_detail_ipc.rs  s4_daemon.rs  s50_ocr_worker.rs  s51_embedding_worker.rs  s52_embedding_jobs.rs  s81_daemon_kill.rs  s82_classifier_model.rs  s83_v27_v28_convergence.rs  s84_v28_v29_artifact_repair.rs  skeleton.rs  subprocess_recovery.rs
crates/embedder/: Cargo.toml
crates/embedder/src/: lib.rs  resident.rs
crates/embedder/tests/: embedder_contract.rs  fake.rs  resident.rs  s11_embedder.rs
crates/embedding-runtime/: Cargo.toml
crates/embedding-runtime/src/: main.rs  runtime_pack.rs  tests.rs
crates/extractor-rules/: Cargo.toml
crates/extractor-rules/src/: lib.rs
crates/extractor-rules/tests/: rules.rs  s10_fields.rs  s7_extractor_rules.rs  strong_rules_contract.rs
crates/import-pipeline/: Cargo.toml
crates/import-pipeline/src/: artifact_fault.rs  classification.rs  classification_tests.rs  data_directory_owner.rs  immutable_ingest.rs  index_publication.rs  index_recovery.rs  lib.rs  migration_artifacts.rs  migration_rebuild.rs  migration_rebuild_tests.rs  ocr_publication.rs  processing_contract.rs  processing_contract_tests.rs  publication_coordinator.rs  purge_artifact.rs  search_artifact_cache.rs  search_artifacts.rs  search_publication.rs  search_publication_commit.rs  search_publication_failure.rs  search_publication_ocr.rs  search_publication_tests.rs  search_publication_vector.rs  search_vectorizer.rs  source_digest.rs  source_dispositions.rs  source_dispositions_tests.rs  timing.rs
crates/import-pipeline/tests/: public_synthetic_admission.rs
crates/import-worker/: Cargo.toml
crates/import-worker/src/: lib.rs
crates/index-fulltext/: Cargo.toml
crates/index-fulltext/src/: lib.rs  manifest.rs  manifest_inspection.rs  purge_artifact.rs  snapshot_gc.rs  snapshot_generation.rs  snapshot_identity.rs  snapshot_path_identity.rs
crates/index-fulltext/tests/: fulltext.rs  fulltext_contract.rs  installed_acceptance_flock_interop.rs  s8_fulltext.rs
crates/index-vector/: Cargo.toml
crates/index-vector/src/: ann.rs  codec.rs  lib.rs  manifest_inspection.rs  model.rs  model_contract.rs  private_storage.rs  publish_control.rs  purge_artifact.rs  snapshot_gc.rs  snapshot_gc_candidates.rs  snapshot_gc_tests.rs  snapshot_identity.rs  snapshot_model.rs  snapshot_root.rs  store.rs  store_tests.rs
crates/index-vector/tests/: s11_vector_index.rs  s807_vector_v3.rs  vector_index.rs  vector_index_contract.rs
crates/ingest-scheduler/: Cargo.toml
crates/ingest-scheduler/src/: lib.rs
crates/ingest-scheduler/tests/: ocr_required_queue_contract.rs  s12_ingest_scheduler.rs  scheduler.rs
crates/meta-store/: Cargo.toml
crates/meta-store/src/: active_store_manifest.rs  artifact_repair_attempt.rs  artifact_repair_attempt_persistence.rs  artifact_repair_attempt_tests.rs  artifact_repair_attempt_transaction.rs  artifact_repair_context.rs  classification.rs  data_directory_owner.rs  data_directory_owner_tests.rs  immutable_ingest_stage.rs  immutable_ingest_stage_tests.rs  immutable_search.rs  immutable_search_tests.rs  import_processing_contract.rs  import_processing_store.rs  import_processing_store_tests.rs  import_root_control.rs  import_root_head.rs  import_root_head_tests.rs  import_task_failure.rs  import_task_purpose.rs  lib.rs  migration_rebuild_attempt.rs  migration_rebuild_barrier.rs  (+23 more)
crates/parser-common/: Cargo.toml
crates/parser-docx/: Cargo.toml
crates/parser-pdf/: Cargo.toml
crates/pdf-render-runtime/: Cargo.toml
crates/privacy/: Cargo.toml
crates/process-containment/: Cargo.toml
crates/rank-fusion/: Cargo.toml
crates/resume-classifier/: Cargo.toml
crates/search-runtime/: Cargo.toml
crates/sectionizer/: Cargo.toml
(+609 files in other folders)
