[workspace]
members = [
    "crates/core-domain",
    "crates/config",
    "crates/meta-store",
    "crates/daemon",
    "crates/cli",
    "crates/fs-crawler",
    "crates/parser-common",
    "crates/parser-docx",
    "crates/parser-pdf",
    "crates/text-normalizer",
    "crates/sectionizer",
    "crates/extractor-rules",
    "crates/embedder",
    "crates/index-fulltext",
    "crates/index-vector",
    "crates/import-pipeline",
    "crates/ingest-scheduler",
    "crates/ocr-client",
    "crates/rank-fusion",
    "crates/search-planner",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.metadata.resume_ir.local_ci]
commands = [
    "cargo metadata --no-deps",
    "cargo fmt --check",
    "cargo clippy --workspace --all-targets --all-features -- -D warnings",
    "cargo test --workspace",
]
