[workspace]
members = [
    "crates/core-domain",
    "crates/config",
    "crates/meta-store",
    "crates/daemon",
    "crates/cli",
    "crates/fs-crawler",
    "crates/parser-common",
    "crates/parser-doc",
    "crates/parser-docx",
    "crates/parser-pdf",
    "crates/parser-text",
    "crates/process-containment",
    "crates/privacy",
    "crates/text-normalizer",
    "crates/sectionizer",
    "crates/resume-classifier",
    "crates/extractor-rules",
    "crates/embedder",
    "crates/embedding-protocol",
    "crates/embedding-runtime",
    "crates/index-fulltext",
    "crates/index-vector",
    "crates/import-pipeline",
    "crates/ingest-scheduler",
    "crates/ocr-client",
    "crates/pdf-render-runtime",
    "crates/rank-fusion",
    "crates/search-planner",
    "crates/search-runtime",
    "crates/benchmark-runner",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "GPL-3.0-or-later"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.metadata.resume_ir.local_ci]
commands = [
    "cargo metadata --no-deps --locked",
    "cargo fmt --check",
    "cargo clippy --workspace --all-targets --all-features --locked -- -D warnings",
    "cargo test --workspace --locked",
    "./scripts/ci/check-licenses.sh",
    "./scripts/ci/guard-public-repo.sh",
]

[profile.release]
lto = "thin"
codegen-units = 1
