[package]
name = "benchmark-runner"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
embedder = { path = "../embedder" }
extractor-rules = { path = "../extractor-rules" }
index-fulltext = { path = "../index-fulltext" }
ocr-client = { path = "../ocr-client" }
rank-fusion = { path = "../rank-fusion" }
serde = "1"
serde_json = "1"

[lints]
workspace = true
