[package]
name = "benchmark-runner"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
core-domain = { path = "../core-domain" }
embedder = { path = "../embedder" }
extractor-rules = { path = "../extractor-rules" }
index-fulltext = { path = "../index-fulltext" }
ocr-client = { path = "../ocr-client" }
rank-fusion = { path = "../rank-fusion" }
serde = "1"
serde_json = "1"
sha2 = "0.10"

[lints]
workspace = true
