[package]
name = "resume-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "resume-cli"
path = "src/main.rs"

[dependencies]
embedder = { path = "../embedder" }
fs4 = "0.13.1"
import-pipeline = { path = "../import-pipeline" }
index-fulltext = { path = "../index-fulltext" }
index-vector = { path = "../index-vector" }
meta-store = { path = "../meta-store" }
ocr-client = { path = "../ocr-client" }
privacy = { path = "../privacy" }
rank-fusion = { path = "../rank-fusion" }
search-planner = { path = "../search-planner" }
sectionizer = { path = "../sectionizer" }
serde_json = "1"
sysinfo = { version = "0.39.3", default-features = false, features = ["disk", "system"] }

[lints]
workspace = true
