[package]
name = "resume-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "resume-cli"
path = "src/main.rs"

[dependencies]
benchmark-runner = { path = "../benchmark-runner" }
core-domain = { path = "../core-domain" }
daemon-contract = { path = "../daemon-contract" }
embedder = { path = "../embedder" }
fs-crawler = { path = "../fs-crawler" }
fs4 = "0.13.1"
import-pipeline = { path = "../import-pipeline" }
meta-store = { path = "../meta-store" }
ocr-client = { path = "../ocr-client" }
privacy = { path = "../privacy" }
rank-fusion = { path = "../rank-fusion" }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
search-planner = { path = "../search-planner" }
search-runtime = { path = "../search-runtime" }
sectionizer = { path = "../sectionizer" }
serde_json = "1"
sha2 = "0.10"
sysinfo = { version = "0.39.3", default-features = false, features = ["disk", "system"] }

[dev-dependencies]
meta-store = { path = "../meta-store", features = ["migration-test-support"] }

[lints]
workspace = true
