[package]
name = "resume-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "resume-daemon"
path = "src/main.rs"

[dependencies]
embedder = { path = "../embedder" }
getrandom = "0.2"
index-fulltext = { path = "../index-fulltext" }
index-vector = { path = "../index-vector" }
import-pipeline = { path = "../import-pipeline" }
meta-store = { path = "../meta-store" }
notify = "8"
ocr-client = { path = "../ocr-client" }
rank-fusion = { path = "../rank-fusion" }
search-planner = { path = "../search-planner" }
sectionizer = { path = "../sectionizer" }
serde_json = "1"

[lints]
workspace = true
