[package]
name = "resume-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "resume-daemon"
path = "src/main.rs"

[dependencies]
daemon-contract = { path = "../daemon-contract" }
embedder = { path = "../embedder" }
embedding-protocol = { path = "../embedding-protocol" }
getrandom = "0.2"
import-pipeline = { path = "../import-pipeline" }
meta-store = { path = "../meta-store" }
notify = "8"
ocr-client = { path = "../ocr-client" }
process-containment = { path = "../process-containment" }
privacy = { path = "../privacy" }
rank-fusion = { path = "../rank-fusion" }
search-planner = { path = "../search-planner" }
search-runtime = { path = "../search-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
index-fulltext = { path = "../index-fulltext" }
index-vector = { path = "../index-vector" }
meta-store = { path = "../meta-store", features = ["migration-test-support"] }
tempfile = "3"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "=0.30.1", default-features = false, features = ["fs", "socket"] }

[lints]
workspace = true
