[package]
name = "import-pipeline"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
core-domain = { path = "../core-domain" }
extractor-rules = { path = "../extractor-rules" }
fs-crawler = { path = "../fs-crawler" }
index-fulltext = { path = "../index-fulltext" }
index-vector = { path = "../index-vector" }
meta-store = { path = "../meta-store" }
parser-common = { path = "../parser-common" }
parser-doc = { path = "../parser-doc" }
parser-docx = { path = "../parser-docx" }
parser-pdf = { path = "../parser-pdf" }
parser-text = { path = "../parser-text" }
privacy = { path = "../privacy" }
resume-classifier = { path = "../resume-classifier" }
same-file = "1.0.6"
sectionizer = { path = "../sectionizer" }
sha2 = "0.10"
sysinfo = { version = "0.39.3", default-features = false, features = ["system"] }
text-normalizer = { path = "../text-normalizer" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[lints]
workspace = true
