[package]
name = "import-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
core-domain.workspace = true
fs-crawler.workspace = true
index-fulltext.workspace = true
meta-store.workspace = true
parser-common.workspace = true
parser-docx.workspace = true
parser-pdf.workspace = true
sectionizer.workspace = true
sha2.workspace = true
text-normalizer.workspace = true

[lints]
workspace = true
