[package]
name = "index-fulltext"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chacha20poly1305 = "0.10"
core-domain = { path = "../core-domain" }
getrandom = "0.2"
privacy = { path = "../privacy" }
same-file = "1.0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.26.1"

[lints]
workspace = true
