[package]
name = "index-vector"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chacha20poly1305 = "0.10"
fs4 = "0.13.1"
getrandom = "0.2"
hnsw_rs = "0.3.4"
serde_json = "1"

[dev-dependencies]
embedder = { path = "../embedder" }

[lints]
workspace = true
