[package]
name = "ingest-scheduler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "ingest_scheduler"
path = "src/lib.rs"

[dependencies]
ocr-client = { path = "../ocr-client" }
parser-common = { path = "../parser-common" }

[lints]
workspace = true
