[package]
name = "meta-store"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
core-domain = { path = "../core-domain" }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
serde_json = "1"

[lints]
workspace = true
