[package]
name = "meta-store"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.11"
core-domain = { path = "../core-domain" }
getrandom = "0.2"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
serde_json = "1"

[lints]
workspace = true
