[package]
name = "meta-store"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
migration-test-support = []

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
core-domain = { path = "../core-domain" }
fs4 = "0.13.1"
getrandom = "0.2"
rusqlite = { version = "0.31", features = ["backup", "bundled-sqlcipher-vendored-openssl"] }
resume-classifier = { path = "../resume-classifier" }
same-file = "1.0.6"
serde_json = "1"
sha2 = "0.10"
tempfile = "3"

[[test]]
name = "s807_v27"
path = "tests/s807_v27.rs"
required-features = ["migration-test-support"]

[lints]
workspace = true
