[package]
name = "parser-docx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "parser_docx"
path = "src/lib.rs"

[dependencies]
parser-common = { path = "../parser-common" }
quick-xml = "0.38.4"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[lints]
workspace = true
