[package]
name = "parser-docx"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
parser-common.workspace = true
quick-xml = "0.31"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
