[package]
name = "parser-docx"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
parser-common = { path = "../parser-common" }
quick-xml = "0.31"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[lints]
workspace = true
