[package]
name = "parser-pdf"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "parser_pdf"
path = "src/lib.rs"

[dependencies]
parser-common = { path = "../parser-common" }

[lints]
workspace = true
