[package]
name = "parser-pdf"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
lopdf = "0.42.0"
parser-common = { path = "../parser-common" }

[dev-dependencies]
core-domain = { path = "../core-domain" }
flate2 = "1.1"

[lints]
workspace = true
