[package]
name = "resume-pdf-render-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
windows-static-pdfium = ["dep:pdfium-render"]

[target.'cfg(windows)'.dependencies]
pdfium-render = { version = "=0.9.3", default-features = false, features = ["pdfium_7881", "static"], optional = true }

[lints]
workspace = true
