[package]
name = "privacy"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
core-domain = { path = "../core-domain" }
getrandom = "0.2"
hmac = "0.12"
sha2 = "0.10"

[lints]
workspace = true
