[package]
name = "process-containment"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "=0.31.3", default-features = false, features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
win32job = "=2.0.3"

[lints]
workspace = true
