[package]
name = "rank-fusion"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rank_fusion"
path = "src/lib.rs"

[dependencies]
core-domain = { path = "../core-domain" }
extractor-rules = { path = "../extractor-rules" }

[lints]
workspace = true
