[package]
name = "sectionizer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "sectionizer"
path = "src/lib.rs"

[dependencies]
core-domain = { path = "../core-domain" }

[lints]
workspace = true
