[package]
name = "resume-desktop"
# This is the internal Rust crate version, not the product version.
# apps/desktop/package.json is the single product-version authority.
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.5", features = [] }
tempfile = "3.27.0"
rfd = { version = "0.17.2", default-features = false }
uuid = { version = "1.23.5", features = ["v4"] }
getrandom = "0.3.4"
daemon-contract = { path = "../../../crates/daemon-contract" }
process-containment = { path = "../../../crates/process-containment" }

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
